<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EasySummary</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_show_welcome">Instructions</string>
    <string name="action_terms">Terms</string>
    <string name="action_legal_notice">Legal Notice</string>
    <string name="action_privacy_policy">PlaceMe Privacy Policy</string>
    <string name="title_activity_screen_slide_pager">ScreenSlidePagerActivity</string>
    <string name="fragment_screen_slide_page_1_text">Master Every Summary</string>
    <string name="fragment_screen_slide_page_2_text">Automatic</string>
    <string name="fragment_screen_slide_page_3_text">Easy To Learn</string>
    <string name="ok_button">OK</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="empty"></string>

</resources>
